Add google-api-python-client dependency

--- a/requirements.txt
+++ b/requirements.txt
@@ -5,8 +5,10 @@ django-cors-headers
 gunicorn
 dj-database-url
 psycopg2-binary
+
 gspread
 google-auth
 google-auth-oauthlib
 google-auth-httplib2
+google-api-python-client
 geopy
