--- a/techfix-app/package.json
+++ b/techfix-app/package.json
@@ -28,6 +28,7 @@
     "expo-image": "~3.0.10",
     "expo-linking": "~8.0.9",
     "expo-location": "~19.0.7",
+    "expo-media-library": "~18.2.1",
     "expo-print": "~15.0.8",
     "expo-router": "~6.0.15",
     "expo-sharing": "~14.0.8",
