--- a/techfix-app/app.json
+++ b/techfix-app/app.json
@@ -12,15 +12,23 @@
       "backgroundColor": "#2C2C2C"
     },
     "android": {
+      "package": "com.shijil.py.texfixapp",
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#2C2C2C"
       },
       "permissions": [
         "android.permission.ACCESS_FINE_LOCATION",
-        "android.permission.ACCESS_COARSE_LOCATION"
+        "android.permission.ACCESS_COARSE_LOCATION",
+        "android.permission.ACCESS_BACKGROUND_LOCATION",
+        "android.permission.FOREGROUND_SERVICE"
       ],
-      "package": "com.shijil.py.texfixapp"
+      "usesCleartextTraffic": true,
+      "config": {
+        "googleMaps": {
+          "apiKey": "AIzaSyDtICApf5bJ_CloGp2D-0caa9Dlr1Rhp1Y"
+        }
+      }
     },
     "web": {
       "favicon": "./assets/favicon.png"
@@ -29,7 +37,11 @@
       [
         "expo-location",
         {
-          "locationAlwaysAndWhenInUsePermissions": "Allow TECHFIX to access your location for accurate check-in/check-out"
+          "locationAlwaysAndWhenInUsePermissions": "Allow TECHFIX to access your location for accurate check-in/check-out",
+          "locationAlwaysPermission": "Allow $(PRODUCT_NAME) to use your location in the background for work tracking.",
+          "locationWhenInUsePermission": "Allow $(PRODUCT_NAME) to use your location while using the app.",
+          "isIosBackgroundLocationEnabled": true,
+          "isAndroidBackgroundLocationEnabled": true
         }
       ],
       "@react-native-community/datetimepicker",
